@@ -23,7 +23,10 @@ import static org.mockito.BDDMockito.given;
 import static org.mockito.ArgumentMatchers.any;
 import static org.junit.jupiter.api.Assertions.*;
 
-@ExtendWith(MockitoExtension.class)
+/**
+ * Unit tests for {@link ArtistController}, verifying request→entity→DTO mapping
+ * and correct HTTP responses.
+ */
 public class ArtistControllerTest {
 
     @Mock
@@ -38,16 +41,19 @@ public class ArtistControllerTest {
     @InjectMocks
     private ArtistController artistController;
 
+    /**
+     * Ensures that creating an artist:
+     * 1) maps the request to an entity
+     * 2) calls the service to save
+     * 3) maps the saved entity back to a DTO
+     * and returns HTTP 201 with the DTO.
+     */
     @Test
     void testCreateArtistDtoPipeline() {
-        // Given: a DTO request
         ArtistRequest req = new ArtistRequest("StageX", "Jazz", 4, "New Orleans");
-        // Map request to entity
         Artist entity = new Artist();
-        entity.setStageName("StageX");
         given(artistMapper.toEntity(req)).willReturn(entity);
 
-        // Service returns saved entity
         Artist saved = new Artist();
         saved.setId(5L);
         saved.setStageName("StageX");
@@ -56,57 +62,54 @@ public class ArtistControllerTest {
         saved.setHomeCity("New Orleans");
         given(artistService.createArtist(entity)).willReturn(saved);
 
-        // Map saved entity to DTO
         ArtistDto dto = new ArtistDto(5L, "StageX", "Jazz", 4, "New Orleans");
         given(artistMapper.toDto(saved)).willReturn(dto);
 
-        // When
         ResponseEntity<ArtistDto> response = artistController.createArtist(req);
 
-        // Then
         assertEquals(201, response.getStatusCodeValue());
         assertEquals(dto, response.getBody());
     }
 
+    /** Verifies getAllArtists() returns a list of mapped DTOs. */
     @Test
     void testGetAllArtistsDtoPipeline() {
-        // Given: a service list
-        Artist e = new Artist(); e.setId(2L); e.setStageName("Alpha");
-        given(artistService.getAllArtists()).willReturn(Collections.singletonList(e));
+        Artist e = new Artist();
+        e.setId(2L);
+        e.setStageName("Alpha");
+        given(artistService.getAllArtists()).willReturn(List.of(e));
 
         ArtistDto d = new ArtistDto(2L, "Alpha", null, null, null);
         given(artistMapper.toDto(e)).willReturn(d);
 
-        // When
         List<ArtistDto> list = artistController.getAllArtists();
 
-        // Then
         assertEquals(1, list.size());
         assertEquals(d, list.get(0));
     }
 
+    /** Verifies getArtist(id) returns HTTP 200 and the correct DTO. */
     @Test
     void testGetArtistByIdDto() {
-        // Given
-        Artist entity = new Artist(); entity.setId(3L); entity.setStageName("Beta");
+        Artist entity = new Artist();
+        entity.setId(3L);
+        entity.setStageName("Beta");
         ArtistDto dto = new ArtistDto(3L, "Beta", null, null, null);
         given(artistService.getArtistById(3L)).willReturn(entity);
         given(artistMapper.toDto(entity)).willReturn(dto);
 
-        // When
         ResponseEntity<ArtistDto> response = artistController.getArtist(3L);
 
-        // Then
         assertEquals(200, response.getStatusCodeValue());
         assertEquals(dto, response.getBody());
     }
 
+    /** Confirms requesting a missing artist throws ResourceNotFoundException. */
     @Test
     void testGetArtistNotFoundDto() {
-        // Given
-        given(artistService.getArtistById(99L)).willThrow(new ResourceNotFoundException("Artist with id 99 not found"));
+        given(artistService.getArtistById(99L))
+                .willThrow(new ResourceNotFoundException("Artist with id 99 not found"));
 
-        // When/Then
         ResourceNotFoundException ex = assertThrows(
                 ResourceNotFoundException.class,
                 () -> artistController.getArtist(99L)
@@ -114,21 +117,21 @@ public class ArtistControllerTest {
         assertEquals("Artist with id 99 not found", ex.getMessage());
     }
 
+    /** Checks getEventsForArtist returns HTTP 200 with the event list. */
     @Test
     void testGetEventsForArtist() {
-        // Given
-        Event ev = new Event(); ev.setId(100L);
-        given(eventService.listAllEventsForArtist(5L)).willReturn(Collections.singletonList(ev));
+        Event ev = new Event();
+        ev.setId(100L);
+        given(eventService.listAllEventsForArtist(5L)).willReturn(List.of(ev));
 
-        // When
         ResponseEntity<List<Event>> resp = artistController.getEventsForArtist(5L);
 
-        // Then
         assertEquals(200, resp.getStatusCodeValue());
         assertEquals(1, resp.getBody().size());
         assertEquals(100L, resp.getBody().get(0).getId());
     }
 
+    /** Verifies getTicketCountForArtist returns HTTP 200 and the correct sum. */
     @Test
     void testGetTicketCountForArtist() {
         Long artistId = 4L;
@@ -139,11 +142,13 @@ public class ArtistControllerTest {
         assertEquals(123L, resp.getBody());
     }
 
+    /** Ensures getVenuesForArtist returns HTTP 200 with the venue list. */
     @Test
     void testGetVenuesForArtist() {
         Long artistId = 7L;
-        Venue v = new Venue(); v.setId(200L);
-        given(artistService.getVenuesForArtist(artistId)).willReturn(Collections.singletonList(v));
+        Venue v = new Venue();
+        v.setId(200L);
+        given(artistService.getVenuesForArtist(artistId)).willReturn(List.of(v));
 
         ResponseEntity<List<Venue>> resp = artistController.getVenuesForArtist(artistId);
         assertEquals(200, resp.getStatusCodeValue());
